# DyMat

./: .gitignore  pyproject.toml  setup.py  tox.ini
DyMat/: __init__.py
DyMat/Export/: CSV.py  CSVlocale.py  DyMatExport.py  Gnuplot.py  HDF5.py  MATLAB.py  __init__.py  netCDF.py  netCDF4.py
scripts/: DyMatExport.py
test/: Model.mo  Test.py  data_v1_0_binNormal.mat  data_v1_1_binTrans.mat  test_dymatfile.py  test_export.py
