[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DyMat"
dynamic = ["version"]
authors = [
    {name = "Jonas Kock am Brink", email = "jokabrink@posteo.de"},
    {name = "Joerg Raedler", email = "joerg@j-raedler.de"},
]
description = "a package for reading and processing the result files of Dymola and OpenModelica"
readme = "README.txt"
requires-python = ">=3.7"
keywords = ["modelica", "dymola", "openmodelica", "mat"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy >= 1.15.0",
    "scipy >= 1.1.0",
]

[project.urls]
Repository = "https://github.com/jokabrink/DyMat"

[project.scripts]
dymat-export = "DyMat.Export.DyMatExport:main"

[tool.setuptools]
packages = ["DyMat", "DyMat.Export"]
dynamic = {version = {attr = "DyMat.__version__" } }

[tool.black]
line-length = 100
